Cleaned up code using for loops.  Need to add radio button to each answer choice within for loop

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link href="https://fonts.googleapis.com/css?family=Shrikhand&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
-  <title>Movie Trivia Game</title>
+  <title>Scary Movie Trivia</title>
 
 </head>
 
@@ -24,10 +24,11 @@
 
 
   <div id="wrapper">
-    <h1>Totally Trivial Trivia!</h1>
+    <h1>Do You Like Scary Movies?</h1>
     <div id="sub-wrapper">
       <div id="quiz-area">
         <button id="start">Start</button>
+        <button id="submit">Submit</button>
       </div>
     </div>
   </div>
