Completed game with CSS. May add submit button later.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Shrikhand&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+  <link href="https://fonts.googleapis.com/css?family=Freckle+Face&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
 
   <title>Scary Movie Trivia</title>
@@ -24,10 +24,12 @@
 
 
   <div id="wrapper">
+      <img src="assets/images/imagebanner.jpg" alt="Title Banner">
     <h1>Do You Like Scary Movies?</h1>
     <div id="sub-wrapper">
+      <div id="timer"></div>
       <div id="quiz-area">
-        <button id="start">Start</button>
+        <button id="start">START</button>
         <button id="submit">Submit</button>
       </div>
     </div>
