GAME COMPLETE. Would like to add reset button

--- a/index.html
+++ b/index.html
@@ -20,17 +20,13 @@
 
 <body>
 
-
-
-
   <div id="wrapper">
       <img src="assets/images/imagebanner.jpg" alt="Title Banner">
-    <h1>Do You Like Scary Movies?</h1>
+    <h1 id="title">DO YOU LIKE SCARY MOVIES?</h1>
     <div id="sub-wrapper">
-      <div id="timer"></div>
       <div id="quiz-area">
         <button id="start">START</button>
-        <button id="submit">Submit</button>
+        <button id="submit">SUBMIT</button>
       </div>
     </div>
   </div>
